# pidgin

./: .config.example  .env.example  .gitignore  .pre-commit-config.yaml  :memory:  ARCHITECTURAL_REVIEW.md  ARCHITECTURE.md  ATOMIC_SEQUENCE_RESEARCH.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT_REPORT.md  CODE_QUALITY_IMPROVEMENTS.md  COMPLETE_FIX_SUMMARY.md  CONFIGURATION_ANALYSIS.md  CONSOLE_PRINT_AUDIT.md  CONTEXT_TRUNCATION_MVP_SUMMARY.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  CURRENT_ISSUES.md  DEVELOPMENT.md  DUCKDB_MIGRATION_GUIDE.md  DUCKDB_MIGRATION_PLAN.md  FLAG_REFERENCE.md  HANDOFF_COMPLETE.md  HANDOFF_NOTES.md  JSONL_STATUS.md  JSONL_UPDATE_SUMMARY.md  LAUNCH_REVIEW.md  LICENSE  METRIC_COMPARISON.md  Makefile  NAMING_CONVENTIONS_UPDATE.md  OBSERVATIONS.md  PATH_FIX_SUMMARY.md  PLANS.md  PROVIDER_ABSTRACTION_REVIEW.md  README.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  STATUS.md  (+29 more)
.github/: PUBLISHING.md
.github/homebrew-tap-template/: README.md
.github/workflows/: check-models.yml  ci.yml  pages.yml  publish.yml
PLANS/: branch-refactoring.md  context-truncation-plan.md  display-config-fix.md  large-module-refactoring-plan.md  large-module-refactoring.md  model-update-monitoring.md  preflight-audit.md  refactor-cli-modules-plan.md  refactor-monitor-plan.md  remove-chats-database.md  thinking-mode-implementation.md
PLANS/archive/: model-data-pipeline.md  models-schema-v2.md  uv-migration.md
docs/: 404.md  ARCHITECTURE.md  DOCUMENTATION_CLEANUP_TODO.md  EVENT_MIGRATION.md  EVENT_SYSTEM_SUMMARY.md  JSONL_ARCHITECTURE.md  MESSAGE_FLOW.md  README.md  RECENT_CHANGES.md  STREAMING_INTERRUPT_IMPLEMENTATION.md  _config.yml  analysis.md  api_reference.rst  branching_workflow.md  cli-usage.md  conf.py  conf.py-e  convergence.md  conversation-architecture.md  conversation-control.md  custom-awareness.md  database.md  db-schema.txt  experiments-doc.md  experiments.md  extended-thinking.md  extensible-routing-architecture.md  index.md  index.rst  installation.md  linguistic-metrics-design.md  metrics.md  observations.md  quickstart.md  seperating_dashboard.md  status.md  streaming-interrupt-design.md  yaml-specs.md
docs/api/: core.md  index.md  providers.md
docs/archive/: DIALOGUE_REFACTOR_PLAN.md  STATE_OF_CODEBASE.md  archive-README.md  conversation-control-old.md
docs/future/: dimensional-prompts-future.md  future-README.md  phased-prompts-future.md
docs/implementation/: ATTACH_REMOVAL_SUMMARY.md  AUTO_ATTACH_SUMMARY.md  CODE_AUDIT_SUMMARY.md  DATABASE_ISSUES.md  PROGRESS_DISPLAY_IMPLEMENTATION.md
docs/man/: Makefile  README.md  pidgin-branch.1  pidgin-info.1  pidgin-metrics.7  pidgin-monitor.1  pidgin-run.1  pidgin-stop.1  pidgin-yaml.5  pidgin.1
docs/refactoring/: EVENT_STORE_REFACTORING_PLAN.md
examples/: dashboard_demo.py  duckdb_demo.py
pidgin/: __init__.py  __init__.py-e  __main__.py  __main__.py-e  basin_detection.py  checkpoint.py  cli.py  cli.py.backup  conductor.py  config.py  config_manager.py  context_manager.py  convergence.py  dialogue.py  dialogue_original.py  dimensional_prompts.py  display_filter.py  event_bus.py  event_dialogue.py  event_factory.py  event_logger.py  event_transcripts.py  events.py  intervention_handler.py  logger.py  metrics.py  models.py  router.py  scripts.py  system_prompts.py  token_management.py  transcripts.py  types.py  user_interaction.py
pidgin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pidgin/analysis/: __init__.py  compression.py  context_manager.py  convergence.py  convergence.py-e  enrichment.py  metrics.py  notebook_cells.py  notebook_generator.py  notebook_generator.py-e  symbols.py
pidgin/attractors/: __init__.py  manager.py  patterns.py  structural.py
pidgin/cli/: __init__.py  __init__.py-e  attach.py  branch.py  chat.py  config.py  config_builder.py  constants.py  constants.py-e  daemon_launcher.py  display_manager.py  display_mixin.py  error_handler.py  experiment.py  experiment_utils.py  helpers.py  helpers.py-e  import_cmd.py  info.py  info.py-e  init_config.py  jsonl_reader.py  list_experiments.py  load_db.py  migrate.py  model_selector.py  models.py  monitor.py  monitor.py-e  name_generator.py  notify.py  notify.py-e  ollama_setup.py  run.py  run.py-e  spec_loader.py  status.py  stop.py  tools.py
pidgin/commands/: __init__.py  analyze.py  compress.py  create.py  manage.py  meditate.py  models.py  run.py
pidgin/config/: __init__.py  archetypes.py  config.py  defaults.py  dimensional_prompts.py  dimensional_prompts.py-e  model_loader.py  model_types.py  models.py  prompts.py  prompts.py-e  provider_capabilities.py  resolution.py  resolution.py-e  schema.py  schema.py-e  settings.py  system_prompts.py  system_prompts.py-e
pidgin/configuration/: __init__.py
pidgin/constants/: __init__.py  agents.py  conversations.py  conversations.py-e  events.py  experiments.py  files.py  linguistic.py  manifests.py  manifests.py-e  metrics.py  metrics.py-e  providers.py  providers.py-e  symbols.py
pidgin/core/: __init__.py  __init__.py-e  app_context.py  conductor.py  conductor.py-e  conductor_original.py  constants.py  conversation.py  conversation_lifecycle.py  conversation_setup.py  conversation_state.py  event_bus.py  events.py  exceptions.py  exceptions.py-e  experiment.py  interrupt_handler.py  message_handler.py  name_coordinator.py  rate_limiter.py  router.py  types.py  (+2 more)
scripts/: README.md  check_model_updates.py  convergence_analysis_script.py  generate_model_reference.py  generate_models.py  model_overrides.yaml  sync_models_from_litellm.py
tests/: README.md  TESTING_IMPROVEMENTS_SUMMARY.md  TESTING_STANDARDS.md  __init__.py  builders.py  builders.py-e  check_models.py  conftest.py  test_attractors.py  test_auto_attach.py  test_basin_detection.py  test_checkpoint.py  test_conductor.py  test_context_management.py  test_dimensional_prompts.py  test_error_handling.py  test_experiment_metrics.py  test_intervention_handler.py  test_local_provider.py  test_models.py  test_progress_display.py  test_token_management.py
tools/: .gitignore  README.md
(+632 files in other folders)
