[tool.poetry]
name = "pidgin"
version = "0.1.0"
description = "AI conversation research tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "pidgin"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.0"
rich = "^13.0.0"
rich-click = "^1.8.0"
pydantic = "^2.0.0"
anthropic = ">=0.25.0,<1.0.0"
openai = "^1.0.0"
google-generativeai = "^0.8.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.0"
aiohttp = "^3.9.0"
urllib3 = "^2.5.0"
requests = "^2.32.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
black = "^24.3.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.0.0"
pre-commit = "^3.0.0"
radon = "^6.0.1"

[tool.poetry.scripts]
pidgin = "pidgin.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pidgin --cov-report=html --cov-report=term"